fixing spacing etc

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    gap: clamp(1em, 2vw, 3em);
+    gap: clamp(0.5em, 1.2vw, 3em);
     padding: 2em;
     background-image: url('Images/background.png');
     border: 1px solid black;
@@ -232,7 +232,7 @@
 .headings {
     display: flex;
     flex-direction: column;
-    gap: none;
+    gap:0em;
 }
 
 .school-list {
@@ -747,7 +747,7 @@
 
     .projects-section {
         background-color: white;
-        width: 75%;
+        width: 95%;
         border-radius: 15px;
         margin: 0 auto;
         text-align: center;
@@ -799,7 +799,7 @@
         flex-direction: column;
         gap: 0.5em;
         background-color: white;
-        width: 80%;
+        width: 90%;
         padding: 1em;
         border-radius: 15px;
         margin: 0 auto;
@@ -943,7 +943,7 @@
     .proficiency-and-skills {
         background-color: rgb(255, 255, 255);
         color: black;
-        width: 80%;
+        width: 95%;
         padding: 0.5em;
         border-radius: 15px;
         display: flex;
@@ -987,7 +987,7 @@
         gap: 0.5em;
         border-radius: 15px;
         background-color: #ffffff;
-        width: 80%;
+        width: 100%;
         margin: 0 auto;
     }
 
@@ -998,7 +998,7 @@
     justify-content: center;
     background-color: white;
     border-radius: 15px;
-    width: 90%;
+    width: 93%;
     padding: 0.8em;
     margin: 0 auto;
 }
@@ -1447,7 +1447,7 @@
         gap: 0.5em;
         border-radius: 15px;
         background-color: #ffffff;
-        width: 94%;
+        width: 100%;
         margin: 0 auto;
         padding: 1em;
     }
@@ -1561,7 +1561,7 @@
         border-radius: 15px;
         text-align: center;
         color: white;
-        width: 70%;
+        width: 100%;
         align-self: center;
     }
 
@@ -1649,6 +1649,7 @@
         object-fit: contain;
         float: right;
     }
+
 }
 
 
